--- a/src/pages/app/admin/updatescenarios/updatescenarios.module.css
+++ b/src/pages/app/admin/updatescenarios/updatescenarios.module.css
@@ -44,7 +44,7 @@
 }
 .formContainer {
   width: 100%;
-  height: 20rem;
+  height: fit-content;
   display: flex;
   flex-direction: row;
   overflow: hidden;
@@ -76,7 +76,10 @@
 .createScenarioRightInputs {
   transform: scaleY(-1); /* Reset rotation for inner contents */
 }
+.createScenarioLeftInputs {
+  height: fit-content;
 
+}
 .inputLabel {
   color: var(--input_label);
 }
@@ -151,6 +154,7 @@
   font: normal;
   height: 100%; /* to do change height to % */
   resize: none;
+  font-family: 'Helvetica 500';
 }
 
 .buttonContainer {
