QA. [Changed the input fonts in scenarios edit and create, added MP3 in question builder and hint for scenario and question builder ]

--- a/src/pages/app/admin/updatescenarios/updatescenarios.module.css
+++ b/src/pages/app/admin/updatescenarios/updatescenarios.module.css
@@ -154,9 +154,12 @@
   font: normal;
   height: 100%; /* to do change height to % */
   resize: none;
-  font-family: 'Helvetica 500';
+  font-family: 'Helvetica 400';
 }
-
+.inputStyleClass {
+  font: normal;
+  font-family: 'Helvetica 400';
+}
 .buttonContainer {
   display: flex;
   flex-direction: row;
