--- a/src/components/nudges/nudges.module.css
+++ b/src/components/nudges/nudges.module.css
@@ -62,3 +62,16 @@
   margin-right: 1rem;
   margin-top: 1rem;
 }
+
+.quill {
+  background-color: var(--innerbackground);
+  margin: 0 1rem;
+}
+
+.quill > div {
+  border: none !important;
+}
+
+.quill > div:nth-child(2) {
+  height: 8rem !important;
+}
