--- a/src/components/nudges/nudges.module.css
+++ b/src/components/nudges/nudges.module.css
@@ -5,7 +5,7 @@
 }
 
 .header {
-  width: 30rem;
+  width: 34rem;
   height: 3.8rem;
   display: flex;
   flex-direction: row;
@@ -64,6 +64,7 @@
 }
 
 .quill {
+  width: 30rem !important;
   background-color: var(--innerbackground);
   margin: 0 1rem;
 }
