Feature [Added Clear and Clear all for game instances, fixed Firefox UI issue,] resolved.

--- a/src/pages/app/admin/gameinstances/gameInstances/gameinstances.module.css
+++ b/src/pages/app/admin/gameinstances/gameInstances/gameinstances.module.css
@@ -42,6 +42,12 @@
 .mainTopContainerRight Button {
   font-size: 1.4rem;
 }
+.mainTopContainerRight {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  
+}
 .mainTopContainerLeft {
 }
 .mainTableContainer {
