--- a/src/components/ui/gameplay/question/question.module.css
+++ b/src/components/ui/gameplay/question/question.module.css
@@ -122,6 +122,10 @@
 }
 
 .buttonContainer > div:nth-child(1) {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
   color: var(--primary);
   font-size: 1.6rem;
   font-family: "helvetica 400";
@@ -204,4 +208,11 @@
   display: flex;
   flex-direction: row;
   justify-content: end;
+}
+
+.repeatIcon {
+  display: inline;
+  width: 2rem;
+  height: 2rem;
+  fill: var(--primary);
 }
