--- a/src/components/ui/gameplay/question/question.module.css
+++ b/src/components/ui/gameplay/question/question.module.css
@@ -216,3 +216,19 @@
   height: 2rem;
   fill: var(--primary);
 }
+.canvas {
+  height: 35rem;
+  overflow: auto;
+}
+
+.skipContainer {
+  margin-top: 1rem;
+  width: 100%;
+  height: 3.6rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  background-size: 50%;
+  background-position: right;
+  background-repeat: no-repeat;
+}
