--- a/src/components/intromedia/intromedia.module.css
+++ b/src/components/intromedia/intromedia.module.css
@@ -2,3 +2,27 @@
   width: 100%;
   height: 100%;
 }
+.audio {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.audio img {
+  width: 35%;
+  height: auto;
+}
+
+.audio audio {
+  margin-top: 3rem;
+  width: 60%;
+}
+
+.pdf {
+  height: 62vh;
+  overflow: auto;
+}
+.previewImage {
+  width: 100%;
+  height: 100%;
+}
