--- a/src/components/ui/gameplay/question/question.module.css
+++ b/src/components/ui/gameplay/question/question.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 100%;
+  height: 60vh;
   position: relative;
 }
 
@@ -53,6 +53,7 @@
   flex-direction: row;
   align-items: start;
   margin-top: 1rem;
+  align-self: flex-end;
 }
 
 .questionContainer > div:nth-child(1) {
@@ -79,7 +80,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 45vh;
+  height: 65%;
 }
 
 .answerContainer {
@@ -232,3 +233,9 @@
   background-position: right;
   background-repeat: no-repeat;
 }
+
+/* @media (min-width: 576px) and (max-width: 992px) {
+  .mainContent {
+    height: 50%;
+  }
+} */
