--- a/src/index.css
+++ b/src/index.css
@@ -91,3 +91,38 @@ body {
   font-weight: 900;
   font-style: normal;
 }
+
+@media (max-width: 576px) {
+  html {
+    font-size: 42%;
+    font-family: "Helvetica 400", "Poppins", sans-serif;
+  }
+}
+
+@media (min-width: 576px) {
+  html {
+    font-size: 48%;
+    font-family: "Helvetica 400", "Poppins", sans-serif;
+  }
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 52%;
+    font-family: "Helvetica 400", "Poppins", sans-serif;
+  }
+}
+
+@media (min-width: 992px) {
+  html {
+    font-size: 60%;
+    font-family: "Helvetica 400", "Poppins", sans-serif;
+  }
+}
+
+@media (min-width: 1200px) {
+  html {
+    font-size: 62.5%;
+    font-family: "Helvetica 400", "Poppins", sans-serif;
+  }
+}
