--- a/src/components/common/upload/FileDropzone/fileDropzone.module.css
+++ b/src/components/common/upload/FileDropzone/fileDropzone.module.css
@@ -33,7 +33,10 @@
 }
 
 .error {
-  color: var(--red);
+  /* color: var(--red); */
+  color: #ff6464;
+  font-family: 'Helvetica 400';
+  font-size: 1.3rem;
   margin-top: 0.5rem;
 }
 
