--- a/src/components/media/audiocontroller/audiocontrol.module.css
+++ b/src/components/media/audiocontroller/audiocontrol.module.css
@@ -52,3 +52,17 @@
 .overlay svg:hover {
   cursor: pointer;
 }
+
+.skipContainer {
+  margin-top: 1rem;
+  width: 100%;
+  height: 3.6rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  background-size: 50%;
+  background-position: right;
+  background-repeat: no-repeat;
+  position: absolute;
+  bottom: 0;
+}
