--- a/src/components/media/videocontroller/videocontrol.module.css
+++ b/src/components/media/videocontroller/videocontrol.module.css
@@ -1,13 +1,26 @@
 .container {
   width: 100%;
-  height: 100%;
+  height: 40rem;
   position: relative;
 }
 
 .container video {
   width: 100%;
-  height: 40rem;
+  height: 100%;
   object-fit: fill;
+}
+.skipContainer {
+  margin-top: 1rem;
+  width: 100%;
+  height: 3.6rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  background-size: 50%;
+  background-position: right;
+  background-repeat: no-repeat;
+  position: absolute;
+  bottom: 0;
 }
 .overlay {
   position: absolute;
