--- a/src/components/ui/gameplay/question/question.module.css
+++ b/src/components/ui/gameplay/question/question.module.css
@@ -209,6 +209,14 @@
   display: flex;
   flex-direction: row;
   justify-content: end;
+  align-items: center;
+  gap: 0.4rem;
+}
+
+.voteCount {
+  color: #2d2d2d;
+  font-size: 1.1rem;
+  font-family: "helvetica 400";
 }
 
 .repeatIcon {
