--- a/src/pages/app/admin/gameplay/gameplay.module.css
+++ b/src/pages/app/admin/gameplay/gameplay.module.css
@@ -34,11 +34,12 @@
   font-family: "helvetica 400";
   color: var(--black);
   margin-top: 0.5rem;
+  max-height: 9rem;
   display: -webkit-box;
   -webkit-line-clamp: 5; /* Number of lines to show */
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .displayInline {
