--- a/src/pages/app/admin/users/users.module.css
+++ b/src/pages/app/admin/users/users.module.css
@@ -22,6 +22,7 @@
   font-size: 4rem;
   color: var(--label);
   font-weight: bold;
+  font-family: 'Helvetica 500';
 }
 
 .left > div:nth-child(2) {
@@ -74,7 +75,8 @@
 }
 .table_content thead {
   width: 100%;
-  background-color: var(--black);
+  background-color: var(--light_black);
+  /* background-color: var(--black); */
   /* position: sticky;
   top: 0;
   z-index: 1; */
@@ -99,7 +101,8 @@
   font-size: 1.3rem;
   font-weight: 500;
   color: #434343;
-  border-bottom: 1px solid #707070;
+  /* border-bottom: 1px solid #707070; */
+  border-bottom: 2px solid var(--input_label);
 }
 
 /* .table_content tbody tr:hover {
@@ -109,6 +112,21 @@
 .table_content tbody tr td {
   height: 3rem;
   padding-left: 0.5rem;
+}
+/* .table_content tbody tr > td:nth-child(3),
+.table_content tbody tr > td:nth-child(4){
+  max-width: 10rem;
+  word-wrap: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+} */
+.table_content tbody tr td {
+  max-width: 10rem;
+  word-wrap: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .table_content th:first-child {
   border-radius: 0.6rem 0 0 0.6rem;
@@ -135,8 +153,8 @@
   cursor: pointer;
 }
 .circleSvg:hover {
-  height: 2.4rem;
-  width: 2.4rem;
+  /* height: 2.4rem;
+  width: 2.4rem; */
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
