--- a/src/components/ui/pagination/pagination.module.css
+++ b/src/components/ui/pagination/pagination.module.css
@@ -21,6 +21,7 @@
   outline: none;
   appearance: none;
   border: 2px solid var(--primary); /* Add a border for better visibility */
+  background-color: #F5F5F5;
 }
 
 .pages_status div {
@@ -38,11 +39,14 @@
 .next {
   font-size: 1.2rem;
   font-weight: 500;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
 }
-
 .disabled {
-  color: #979797;
-  opacity: 1;
+  /* color: #979797; */
+  opacity: 0.5;
 }
 
 input[type="number"]::-webkit-inner-spin-button,
