--- a/src/pages/app/admin/createscenarios/createscenarios.module.css
+++ b/src/pages/app/admin/createscenarios/createscenarios.module.css
@@ -15,6 +15,7 @@
   font-size: 4rem;
   color: var(--label);
   font-weight: bold;
+  font-family: "Helvetica 500";
 }
 .right {
   flex: 1.5;
@@ -72,7 +73,6 @@
 }
 .createScenarioLeftInputs {
   height: fit-content;
-
 }
 
 .inputLabel {
@@ -133,8 +133,11 @@
 
 .imageDropZoneContainerLeft {
   flex: 7;
+  margin-top: 2rem;
 }
-
+.imageDropZoneContainerLeft .customFileDropzoneContainerClass {
+  height: 12rem;
+}
 .imageDropZoneContainerRight {
   flex: 3;
 }
@@ -142,18 +145,25 @@
 .gameIntroductionLeftInputs label {
   font-size: 1.6rem;
   color: #f3f3f3;
-  margin-bottom: 1.6rem;
+  /* margin-bottom: 1.6rem; */
   font-weight: bold;
+}
+.customRichTextEditorContaierClass {
+  margin-top: 2rem;
+  font-family: "Helvetica 400";
+}
+.customRichTextEditorStyleClass > div:nth-child(2)  {
+  height: 15rem ;
 }
 .gameIntroductionTextAreaInputs {
   font: normal;
   height: 100%; /* to do change height to % */
   resize: none;
-  font-family: 'Helvetica 400';
+  font-family: "Helvetica 400";
 }
 .inputStyleClass {
   font: normal;
-  font-family: 'Helvetica 400';
+  font-family: "Helvetica 400";
 }
 .buttonContainer {
   display: flex;
