--- a/src/pages/app/admin/gameinstances/viewinstances/viewinstances.module.css
+++ b/src/pages/app/admin/gameinstances/viewinstances/viewinstances.module.css
@@ -15,6 +15,7 @@
   font-size: 4rem;
   color: var(--label);
   font-weight: bold;
+  font-family: 'Helvetica 500';
 }
 .right {
 }
@@ -112,8 +113,8 @@
   padding: 1rem;
 }
 .treeLeft > div:nth-child(1) {
-  width: 100%;
   height: 40rem;
+  width: 100%;
 }
 .treeLeft > div:nth-child(1) svg {
   width: 100% !important;
