--- a/src/pages/app/admin/homepage/homepage.module.css
+++ b/src/pages/app/admin/homepage/homepage.module.css
@@ -15,6 +15,7 @@
   font-size: 4rem;
   color: var(--label);
   font-weight: bold;
+  font-family: "Helvetica 500";
 }
 .right {
   flex: 1.5;
@@ -31,6 +32,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  padding-top: 1.5rem;
 }
 .buttonContainer {
   position: absolute;
@@ -191,6 +193,9 @@
 .scenarioContainerLeft a {
   font-size: 1.2rem;
 }
+.scenarioContainerLeft > div:nth-child(2) {
+  color: var(--label);
+}
 .mainTableContainer {
   width: 100%;
   height: 100%;
@@ -207,12 +212,14 @@
 }
 .table_content thead {
   width: 100%;
-  background-color: var(--black);
+  /* background-color: var(--black); */
+  background-color: var(--light_black);
 }
 .table_content thead tr {
   font-size: 1.2rem;
   height: 3.4rem;
-  font-weight: 600;
+  /* font-weight: 600; */
+  font-family: "Helvetica 500";
 }
 .table_content thead tr th {
   color: var(--primary);
@@ -227,9 +234,10 @@
 
 .table_content tbody tr {
   font-size: 1.3rem;
-  font-weight: 500;
+  /* font-weight: 500; */
+  font-family: "Helvetica " 400;
   color: #434343;
-  border-bottom: 1px solid #707070;
+  border-bottom: 2px solid var(--input_label);
 }
 
 /* .table_content tbody tr:hover {
@@ -240,9 +248,27 @@
   height: 3rem;
   padding-left: 0.5rem;
 }
+.table_content tbody tr > td:nth-child(3) {
+  max-width: 15rem;
+  word-wrap: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.table_content .scenarioDescription {
+  max-width: 20rem;
+  word-wrap: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  /* 
+    white-space: normal;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2; */
+}
 
 /* for table head rounding */
-
 .table_content th:first-child {
   border-radius: 0.6rem 0 0 0.6rem;
 }
@@ -280,11 +306,10 @@
   cursor: pointer;
 }
 .circleSvg:hover {
-  height: 2.4rem;
-  width: 2.4rem;
+  /* height: 2.4rem;
+  width: 2.4rem; */
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-
 
 /* pagination */
 
