--- a/src/pages/app/gameuser/missioncompleted/missioncompleted.module.css
+++ b/src/pages/app/gameuser/missioncompleted/missioncompleted.module.css
@@ -17,8 +17,13 @@
   border-radius: 2.4rem;
   overflow: hidden;
   background-color: #474747;
+  height: 85vh;
 }
-
+.innerCotainer {
+  overflow-y: auto;
+  height: inherit;
+  padding: 0 0 2rem 0;
+}
 .header {
   width: 100%;
   background-repeat: no-repeat;
@@ -112,6 +117,7 @@
 
 .tree > div:nth-child(1) {
   width: 75%;
+  margin-left: 4rem;
   height: 40rem;
 }
 
@@ -202,6 +208,7 @@
   background-color: var(--primary);
   color: var(--black);
   margin-left: 2rem;
+  cursor: pointer;
 }
 
 .details_row {
