--- a/src/components/media/audiocontroller/audiocontrol.module.css
+++ b/src/components/media/audiocontroller/audiocontrol.module.css
@@ -66,3 +66,34 @@
   position: absolute;
   bottom: 0;
 }
+@media  (max-height: 530px) {
+  .image {
+    height: 22rem;
+  }
+  .image img {
+    display: none;
+  }
+}
+@media (min-height: 531px) and (max-height: 550px) {
+  .image {
+    height: 23rem;
+  }
+  .image img {
+    display: none;
+  }
+}
+@media (min-height: 551px) and (max-height: 599px) {
+  .image {
+    height: 28rem;
+  }
+}
+@media (min-height: 600px) and (max-height: 650px) {
+  .image {
+    height: 30.5rem;
+  }
+}
+@media (min-height: 651px) and (max-height: 720px) {
+  .image {
+    height: 32rem;
+  }
+}
