--- a/src/components/media/videocontroller/videocontrol.module.css
+++ b/src/components/media/videocontroller/videocontrol.module.css
@@ -1,9 +1,35 @@
 .container {
   width: 100%;
   height: 40rem;
+  /* width: 80%;
+  height: 80%; */
   position: relative;
 }
-
+@media  (max-height: 530px) {
+  .container {
+    height: 26rem;
+  }
+}
+@media (min-height: 531px) and (max-height: 550px) {
+  .container {
+    height: 30rem;
+  }
+}
+@media (min-height: 551px) and (max-height: 599px) {
+  .container {
+    height: 32rem;
+  }
+}
+@media (min-height: 600px) and (max-height: 650px) {
+  .container {
+    height: 34.5rem;
+  }
+}
+@media (min-height: 651px) and (max-height: 720px) {
+  .container {
+    height: 36rem;
+  }
+}
 .container video {
   width: 100%;
   height: 100%;
