--- a/src/components/ui/gameplay/question/question.module.css
+++ b/src/components/ui/gameplay/question/question.module.css
@@ -173,7 +173,7 @@
   position: absolute;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 90%;
   background-color: var(--light_black);
   z-index: 200;
 }
@@ -183,6 +183,11 @@
   color: var(--innerbackground);
   margin-bottom: 1rem;
 }
+/* .mediaContainer > div:nth-child(2) {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+} */
 
 .label {
   font-size: 1.7rem;
@@ -254,3 +259,41 @@
     height: 50%;
   }
 } */
+
+@media  (max-height: 530px) {
+  .canvas {
+    height: 20rem;
+  }
+  .mediaContainer {
+    height: 75%;
+  }
+}
+@media (min-height: 531px) and (max-height: 550px) {
+  .canvas {
+    height: 21rem;
+  }
+  .mediaContainer {
+    height: 80%;
+  }
+}
+@media (min-height: 551px) and (max-height: 599px) {
+  .canvas {
+    height: 23rem;
+  }
+  .mediaContainer {
+    height: 82%;
+  }
+}
+@media (min-height: 600px) and (max-height: 650px) {
+  .canvas {
+    height: 28rem;
+  }
+  .mediaContainer {
+    height: 85%;
+  }
+}
+@media (min-height: 651px) and (max-height: 720px) {
+  .canvas {
+    height: 32rem;
+  }
+}
