--- a/src/pages/app/gameuser/gameplay/gameplay.module.css
+++ b/src/pages/app/gameuser/gameplay/gameplay.module.css
@@ -43,7 +43,7 @@
   font-family: "helvetica 400";
   color: var(--black);
   margin-top: 0.5rem;
-  max-height: 9rem;
+  /* max-height: 9rem; */
   /* display: -webkit-box;
   -webkit-line-clamp: 5; 
   -webkit-box-orient: vertical;
@@ -167,12 +167,14 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
+  justify-content: end;
   padding-left: 4rem;
   flex: 1.8;
 }
 .questionContainer {
   margin-top: 8rem;
-  flex: 1;
+  width: 100%;
   background-color: #474747;
   padding: 1.5rem;
 }
@@ -211,9 +213,6 @@
   height: 100%;
   background-color: var(--primary);
 }
-.accordian {
-  width: inherit;
-}
 
 .tree,
 .pause {
@@ -233,4 +232,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.video {
+  width: 100%;
+  height: 100%;
 }
