QA [Max width issue in rich textbox] resolved

--- a/src/pages/app/admin/questions/questionbuilder/questionbuilder.module.css
+++ b/src/pages/app/admin/questions/questionbuilder/questionbuilder.module.css
@@ -75,6 +75,8 @@
 }
 .questionInputLeft {
   flex: 6;
+  max-width: 90rem;
+  min-width: 30rem;
 }
 .customRichTextEditorContaierClass {
   /* margin-top: 2rem; */
