--- a/src/components/trees/selectedTree/selectedTree.module.css
+++ b/src/components/trees/selectedTree/selectedTree.module.css
@@ -70,3 +70,13 @@
   color: var(--innerbackground);
   font-family: "helvetica 400";
 }
+.reset {
+  width: 2rem !important;
+  height: 2rem !important;
+  position: absolute;
+  bottom: 1rem;
+  left: 3rem;
+}
+.reset:hover {
+  cursor: pointer;
+}
