--- a/src/pages/app/admin/missioncompleted/missioncompleted.module.css
+++ b/src/pages/app/admin/missioncompleted/missioncompleted.module.css
@@ -122,10 +122,10 @@
   margin-left: 4rem;
 }
 
-.tree > div:nth-child(1) svg {
+/* .tree > div:nth-child(1) svg {
   width: 100% !important;
   height: 100% !important;
-}
+} */
 
 .tree > div:nth-child(2) {
   width: 25%;
