--- a/src/App.css
+++ b/src/App.css
@@ -140,3 +140,14 @@
 .svg-border {
   fill: var(--primary);
 }
+
+/* ================= loaders ===================  */
+
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
