--- a/src/components/ui/gameplay/question/question.module.css
+++ b/src/components/ui/gameplay/question/question.module.css
@@ -101,7 +101,7 @@
 
 .answer {
   width: 100%;
-  height: 4rem;
+  min-height: 4rem;
   border: 0.1rem solid var(--primary);
   background-color: var(--innerbackground);
   padding: 0 1rem;
