QA [Question and answers long text issue, export button, ] CLIENT [icon svg changes, mandatory fields, pagination (01, 02...), ] resolved

--- a/src/pages/app/admin/createusers/createusers.module.css
+++ b/src/pages/app/admin/createusers/createusers.module.css
@@ -92,3 +92,13 @@
   gap: 1rem;
   margin-top: 1rem;
 }
+
+/* .inputStyleClass::placeholder {
+
+}
+.inputStyleClass::placeholder::after {
+  content: '';
+    background: #415385 0% 0% no-repeat padding-box;
+    opacity: 1;
+} */
+
