--- a/src/routers/gameadmin/gameadmin.module.css
+++ b/src/routers/gameadmin/gameadmin.module.css
@@ -12,9 +12,13 @@
 }
 .leftContainer {
   position: relative;
-  width: 6rem;
+  /* width: 6rem; */
+  width: 4%;
+  transition: width 0.4s ease; 
 }
 .rightContainer {
+  /* width: 96%; */
   width: 100%;
   height: 100%;
+  transition: width 0.4s ease;
 }
