--- a/src/components/forms/loginForm/loginForm.module.css
+++ b/src/components/forms/loginForm/loginForm.module.css
@@ -53,6 +53,6 @@
   text-decoration: underline;
   cursor: pointer;
 }
-/* .inputStyleClass {
-  border: 0.1px solid #2D2D2D;
-} */
+.inputStyleClass {
+  border: 1px solid #D1D1D1;
+}
