FEATURE [Tablet view breapoints] QA [ Question intro resolution issue ] resolved

--- a/src/pages/app/gameuser/missioncompleted/missioncompleted.module.css
+++ b/src/pages/app/gameuser/missioncompleted/missioncompleted.module.css
@@ -228,3 +228,10 @@
   font-family: "helvetica 500";
   color: var(--primary);
 }
+/* Tablet view */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .tree > div:nth-child(1) {
+    height: 70rem !important;
+  }
+}
+ 
