--- a/src/components/ui/gameplay/question/question.module.css
+++ b/src/components/ui/gameplay/question/question.module.css
@@ -179,7 +179,8 @@
   position: absolute;
   top: 0;
   width: 100%;
-  height: 90%;
+  /* height: 90%; */
+  height: inherit;
   background-color: var(--light_black);
   z-index: 200;
 }
@@ -244,11 +245,14 @@
   height: 2rem;
   fill: var(--primary);
 }
-.canvas {
+.canvas,
+.userCanvas {
   height: 35rem;
   overflow: auto;
 }
-
+/* .pdfContainer {
+  position: relative;
+} */
 .skipContainer {
   margin-top: 1rem;
   width: 100%;
@@ -259,6 +263,8 @@
   background-size: 50%;
   background-position: right;
   background-repeat: no-repeat;
+  /* position: absolute;
+  bottom: 0; */
 }
 .voteCount {
   display: flex;
@@ -268,46 +274,97 @@
   align-items: center;
 }
 
+/* Tablet view */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .container {
+    height: 45vh;
+  }
+  .question {
+    max-height: 10.5rem;
+  }
+}
+
 /* @media (min-width: 576px) and (max-width: 992px) {
   .mainContent {
     height: 50%;
   }
 } */
-
-@media (max-height: 530px) {
+@media (max-height: 480px) {
   .canvas {
-    height: 20rem;
+    height: 18rem;
   }
-  .mediaContainer {
+  .userCanvas {
+    height: 22rem;
+  }
+  /* .mediaContainer {
     height: 75%;
+  } */
+}
+@media (min-height: 481px) and (max-height: 530px) {
+  .canvas {
+    height: 22rem;
   }
+  .userCanvas {
+    height: 26rem;
+  }
+  /* .mediaContainer {
+    height: 75%;
+  } */
 }
 @media (min-height: 531px) and (max-height: 550px) {
   .canvas {
-    height: 21rem;
+    height: 24rem;
   }
-  .mediaContainer {
+  .userCanvas {
+    height: 28rem;
+  }
+  /* .mediaContainer {
     height: 80%;
-  }
+  } */
 }
 @media (min-height: 551px) and (max-height: 599px) {
   .canvas {
-    height: 23rem;
+    height: 26rem;
   }
-  .mediaContainer {
+  .userCanvas {
+    height: 30rem;
+  }
+  /* .mediaContainer {
     height: 82%;
-  }
+  } */
 }
 @media (min-height: 600px) and (max-height: 650px) {
   .canvas {
     height: 28rem;
   }
-  .mediaContainer {
-    height: 85%;
+  .userCanvas {
+    height: 32rem;
   }
+  /* .mediaContainer {
+    height: 85%;
+  } */
 }
 @media (min-height: 651px) and (max-height: 720px) {
   .canvas {
     height: 32rem;
+  }
+  .userCanvas {
+    height: 35rem;
+  }
+}
+@media (min-height: 721px) and (max-height: 820px) {
+  .canvas {
+    height: 36rem;
+  }
+  .userCanvas {
+    height: 40rem;
+  }
+}
+@media (min-height: 821px) {
+  .canvas {
+    height: 40rem;
+  }
+  .userCanvas {
+    height: 45rem;
   }
 }
