--- a/src/pages/app/admin/introduction/intro.module.css
+++ b/src/pages/app/admin/introduction/intro.module.css
@@ -42,16 +42,16 @@
   gap: 2rem;
 }
 .previewAudioImage {
-  max-width: 100%; 
-  max-height: 100%; 
-  width: auto; 
-  height: auto; 
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
 }
 .pdfPreviewContainer {
-  max-width: 100%; 
-  max-height: 100%; 
-  width: 100%; 
-  height: 100%; 
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 .customizedPDFPreviewContainer {
   width: 100%;
@@ -67,8 +67,24 @@
   overflow: hidden; /* Hide any overflowing content */
 }
 .previewImage {
-  max-width: 100%; 
-  max-height: 100%; 
-  width: 50%; 
-  height: 100%; 
+  max-width: 100%;
+  max-height: 100%;
+  width: 50%;
+  height: 100%;
+}
+
+@media only screen and (min-width: 768px)  and (max-width: 1024px) {
+  .videoContainer {
+    width: auto;
+    height: auto;
+  }
+  .previewImage {
+    width: 100%;
+  }
+  .container {
+    padding: 10rem 15rem;
+  }
+  .audioContainer {
+    padding: 10rem 0;
+  }
 }
