--- a/src/pages/app/gameuser/introduction/intro.module.css
+++ b/src/pages/app/gameuser/introduction/intro.module.css
@@ -72,3 +72,18 @@
   width: 50%; 
   height: 100%; 
 }
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .videoContainer {
+    width: auto;
+    height: auto;
+  }
+  .previewImage {
+    width: 100%;
+  }
+  .container {
+    padding: 10rem 15rem;
+  }
+  /* .audioContainer {
+    padding: 10rem 0;
+  } */
+}
