--- a/src/pages/app/admin/introduction/intro.module.css
+++ b/src/pages/app/admin/introduction/intro.module.css
@@ -2,7 +2,7 @@
   width: 100vw;
   height: 100vh;
   background-color: #2d2d2d;
-  padding: 10rem 25rem;
+  padding: 6.5rem 25rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,10 +12,13 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   position: relative;
 }
-.videoContainer video {
+.videoWrapper {
+  position: relative;
+}
+.videoWrapper video {
   width: 100%;
   height: 100%;
   margin: 0; /* Reset margin */
@@ -73,7 +76,29 @@
   height: 100%;
 }
 
-@media only screen and (min-width: 768px)  and (max-width: 1024px) {
+.overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 400;
+  /* background-color: rgba(1, 1, 1, 0.5); */
+  backdrop-filter: blur(0.8rem);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.overlay svg {
+  width: 12rem;
+  height: 12rem;
+  fill: var(--primary);
+}
+
+.overlay svg:hover {
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
   .videoContainer {
     width: auto;
     height: auto;
