--- a/src/pages/app/gameuser/introduction/intro.module.css
+++ b/src/pages/app/gameuser/introduction/intro.module.css
@@ -2,9 +2,9 @@
   width: 100vw;
   height: 100vh;
   background-color: #2d2d2d;
-  padding: 10rem 25rem;
+  padding: 6.5rem 25rem;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
 }
 .videoContainer {
@@ -15,7 +15,10 @@
   align-items: center;
   position: relative;
 }
-.videoContainer video {
+.videoWrapper {
+  position: relative;
+}
+.videoWrapper video {
   width: 100%;
   height: 100%;
   margin: 0; /* Reset margin */
@@ -42,16 +45,16 @@
   gap: 2rem;
 }
 .previewAudioImage {
-  max-width: 100%; 
-  max-height: 100%; 
-  width: auto; 
-  height: auto; 
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
 }
 .pdfPreviewContainer {
-  max-width: 100%; 
-  max-height: 100%; 
-  width: 100%; 
-  height: 100%; 
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 .customizedPDFPreviewContainer {
   width: 100%;
@@ -67,11 +70,34 @@
   overflow: hidden; /* Hide any overflowing content */
 }
 .previewImage {
-  max-width: 100%; 
-  max-height: 100%; 
-  width: 50%; 
-  height: 100%; 
+  max-width: 100%;
+  max-height: 100%;
+  width: 50%;
+  height: 100%;
 }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 400;
+  /* background-color: rgba(1, 1, 1, 0.5); */
+  backdrop-filter: blur(0.8rem);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.overlay svg {
+  width: 12rem;
+  height: 12rem;
+  fill: var(--primary);
+}
+
+.overlay svg:hover {
+  cursor: pointer;
+}
+
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   .videoContainer {
     width: auto;
