--- a/src/pages/app/admin/questions/questionlist/questionlist.module.css
+++ b/src/pages/app/admin/questions/questionlist/questionlist.module.css
@@ -199,3 +199,15 @@
   width: 2.4rem; */
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+/* pagination */
+
+.paginationContainer {
+  width: 100%;
+  height: 3rem;
+  border-radius: 0rem 0rem 0.8rem 0.8rem;
+  background-color: #dedede;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
