--- a/src/pages/app/admin/gameplay/gameplay.module.css
+++ b/src/pages/app/admin/gameplay/gameplay.module.css
@@ -130,7 +130,8 @@
   text-transform: uppercase;
   margin-top: 0.8rem;
 }
-
+.customMeterContainerClass {
+}
 .mainContent {
   width: 100%;
   height: calc(100vh - 17rem);
@@ -167,7 +168,6 @@
   display: flex;
   flex-direction: column;
   justify-content: end;
-
   padding-left: 4rem;
   flex: 1.8;
 }
@@ -236,4 +236,30 @@
 .video {
   width: 100%;
   height: 100%;
+}
+
+/* Tablet view */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .score {
+    justify-content: center;
+  }
+  .header_middle {
+    background-size: 45%;
+  }
+  .middle {
+    justify-content: center;
+  }
+  .customMeterContainerClass {
+    width: 12rem !important;
+    padding-right: 1.5rem !important;
+  }
+  .tickStyleClass {
+    height: 5rem !important;
+  }
+  .customInfoClass {
+    right: 0.5rem !important;
+  }
+  .customTimerClass {
+    font-size: 2rem !important;
+  }
 }
