--- a/src/pages/app/admin/introduction/intro.module.css
+++ b/src/pages/app/admin/introduction/intro.module.css
@@ -18,8 +18,8 @@
 .videoContainer video {
   width: 100%;
   height: 100%;
-  margin: 0; /* Reset margin */
-  padding: 0; /* Reset padding */
+  margin: 0;
+  padding: 0;   
   object-fit: fill;
 }
 .buttonContainer {
@@ -62,14 +62,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 100%; /* Limit the container width to the available space */
-  max-height: 100%; /* Limit the container height to the available space */
-  overflow: hidden; /* Hide any overflowing content */
+  /* max-width: 100%;
+  max-height: 100%; */
+  height: 100%;
+  width: 100%;
+  overflow: hidden; 
 }
 .previewImage {
   max-width: 100%;
   max-height: 100%;
-  width: 50%;
+  width: 100%;
   height: 100%;
 }
 
