--- a/src/pages/app/gameuser/introduction/intro.module.css
+++ b/src/pages/app/gameuser/introduction/intro.module.css
@@ -62,15 +62,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 100%; /* Limit the container width to the available space */
-  max-height: 100%; /* Limit the container height to the available space */
-  overflow: hidden; /* Hide any overflowing content */
+  /* max-width: 100%;
+  max-height: 100%; */
+  height: 100%;
+  width: 100%;
+  overflow: hidden; 
 }
 .previewImage {
-  max-width: 100%; 
-  max-height: 100%; 
-  width: 50%; 
-  height: 100%; 
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  /* object-fit: contain; */
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   .videoContainer {
