--- a/src/pages/app/gameuser/introduction/intro.module.css
+++ b/src/pages/app/gameuser/introduction/intro.module.css
@@ -73,7 +73,7 @@
   max-height: 100%;
   width: 100%;
   height: 100%;
-  /* object-fit: contain; */
+  object-fit: contain;
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   .videoContainer {
