--- a/src/components/progress/progress.module.css
+++ b/src/components/progress/progress.module.css
@@ -82,6 +82,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-self: center;
+  margin-left: 1rem;
 }
 .label {
   width: 22.5%;
