--- a/src/components/progress/progress.module.css
+++ b/src/components/progress/progress.module.css
@@ -91,8 +91,8 @@
   width: 22.5%;
   color: #fff;
   font-size: 1rem;
-  word-wrap: break-word;
-  word-break: break-all;
+  /* word-wrap: break-word;
+  word-break: break-all; */
 }
 .label:last-child {
   width: 10%;
