--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@
 
 /************************** Custom Scroll Bar  *************************/
 ::-webkit-scrollbar {
-  height: 1rem;
+  height: 0.8rem;
   width: 0.4rem;
 }
 
@@ -81,9 +81,9 @@
 }
 
 /* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
+/* ::-webkit-scrollbar-thumb:hover {
   background: var(--primary-light);
-}
+} */
 
 /* ================ modal ================= */
 
