--- a/src/App.css
+++ b/src/App.css
@@ -151,3 +151,31 @@
   justify-content: center;
   align-items: center;
 }
+
+.loader-container {
+  width: 100%;
+  height: 100%;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader {
+  border: 3.5px solid #f3f3f3; /* Light grey */
+  border-top: 3.5px solid var(--primary); /* Blue */
+  border-radius: 50%;
+  width: 2.4rem;
+  height: 2.4rem;
+  animation: spin 2s linear infinite;
+  margin: 20px auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
