--- a/src/pages/app/admin/scenarios/scenarios.module.css
+++ b/src/pages/app/admin/scenarios/scenarios.module.css
@@ -69,7 +69,7 @@
 .table_content thead tr th {
   color: var(--primary);
   text-align: left;
-  padding-left: 0.5rem;
+  padding-left: 2rem;
 }
 
 .table_content tbody {
@@ -90,8 +90,8 @@
   } */
 
 .table_content tbody tr td {
-  height: 3rem;
-  padding-left: 0.5rem;
+  height: 3.5rem;
+  padding-left: 2rem;
 }
 .table_content tbody tr > td:nth-child(3) {
   max-width: 15rem;
@@ -109,11 +109,19 @@
   -webkit-line-clamp: 2; */
 }
 .table_content tbody tr td {
+  min-width: 5rem;
   max-width: 10rem;
   word-wrap: break-word;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+/* .table_content tbody tr > td:nth-child(1),
+.table_content tbody tr > td:nth-child(2) {
+  min-width: 2rem;
+} */
+.table_content tbody tr > td:nth-child(1) {
+  min-width: 2rem;
 }
 .scenarioName:hover {
   text-decoration: underline;
@@ -148,11 +156,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 2.2rem;
-  height: 2.2rem;
+  /* width: 2.2rem;
+  height: 2.2rem; */
+  width: 2.4rem;
+  height: 2.4rem;
   border-radius: 50%;
   background-color: #ffecbd;
   cursor: pointer;
+  padding: 0;
+  
 }
 .circleSvg:hover {
   /* height: 2.4rem;
