--- a/src/pages/app/admin/users/users.module.css
+++ b/src/pages/app/admin/users/users.module.css
@@ -89,7 +89,7 @@
 .table_content thead tr th {
   color: var(--primary);
   text-align: left;
-  padding-left: 0.5rem;
+  padding-left: 2rem;
 }
 
 .table_content tbody {
@@ -110,8 +110,8 @@
 } */
 
 .table_content tbody tr td {
-  height: 3rem;
-  padding-left: 0.5rem;
+  height: 3.5rem;
+  padding-left: 2rem;
 }
 /* .table_content tbody tr > td:nth-child(3),
 .table_content tbody tr > td:nth-child(4){
@@ -122,11 +122,19 @@
   white-space: nowrap;
 } */
 .table_content tbody tr td {
+  min-width: 5rem;
   max-width: 10rem;
   word-wrap: break-word;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+/* .table_content tbody tr > td:nth-child(1),
+.table_content tbody tr > td:nth-child(2) {
+  min-width: 2rem;
+} */
+.table_content tbody tr > td:nth-child(1) {
+  min-width: 2rem;
 }
 .table_content th:first-child {
   border-radius: 0.6rem 0 0 0.6rem;
@@ -146,8 +154,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 2.2rem;
-  height: 2.2rem;
+  width: 2.4rem;
+  height: 2.4rem;
   border-radius: 50%;
   background-color: #ffecbd;
   cursor: pointer;
